# program-manager

./: .gitignore  LICENSE  README.md  notes.html  package-lock.json  package.json  search.html  todo.html  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  release.yml
docs/: README_EN.md  UI多主题与切换执行计划书.md  UI多主题与切换设计方案.md  优化改造发布验收记录.md  优化改造执行计划书.md  优化改造设计书.md  版本与迁移规则.md  项目优化点梳理.md
docs/updates/: V1.1.0更新日志.md  V1.1.6更新日志.md
program-manager/: README.md  index.html
program-manager/scripts/: build.bat  clean-debug-only.bat  clean.bat
program-manager/src/: App.vue  main.ts
program-manager/src-tauri/: Cargo.toml
program-manager/src-tauri/src/: main.rs
program-manager/src-tauri/src/commands/: mod.rs
program-manager/src-tauri/src/utils/: config.rs  mod.rs  registry.rs
scripts/: check-versions.mjs  dev.bat
src/: App.vue  NotesWindow.vue  SearchWindow.vue  TodoWindow.vue  notes-main.ts  search-main.ts  style.css  todo-main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/adapters/: clipboardAdapter.ts  shellAdapter.ts  tauriAdapter.test.ts  tauriAdapter.ts
src/components/: AppCard.vue  CategoryList.vue  ClipboardHistory.vue  MaintenancePanel.vue  QuickNotes.vue  SceneEditor.vue  SettingsDialog.vue  SpotlightSearch.vue  TodoItemRow.vue
src/services/: configService.test.ts  configService.ts  legacyMigrationService.test.ts  legacyMigrationService.ts  localDataService.test.ts  localDataService.ts  persistenceService.ts  sceneActionRegistry.ts  sceneService.test.ts  (+7 more)
(+44 files in other folders)
